--- a/group7_rwa4/config/sample_user_config.yaml
+++ b/group7_rwa4/config/sample_user_config.yaml
@@ -30,6 +30,11 @@ sensors:
     pose:
       xyz: [-0.652396, 1.912097, 0.974256]
       rpy: [-0.009386, 0.806891, 0.008639]
+  lc_agv_1:
+    type: logical_camera
+    pose:
+      xyz: [0.247088, 3.402534, 1.383304]
+      rpy: [1.282268, 1.548405, -0.278746]
   # logical_camera_3:
   #   type: logical_camera
   #   pose:
